fix windows test bugs