@@ -425,10 +425,10 @@
           <artifactId>scalatest-maven-plugin</artifactId>
           <version>1.0</version>
           <configuration>
-            <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+            <reportsDirectory>${project.build.directory}/scalatest-reports</reportsDirectory>
             <junitxml>.</junitxml>
-            <filereports>${project.build.directory}/ToonaTestSuite.txt</filereports>
-            <argLine>-Xmx3g -XX:MaxPermSize=${MaxPermGen} -XX:ReservedCodeCacheSize=512m</argLine>
+            <filereports>ToonaTestSuite.txt</filereports>
+            <argLine>-Xmx3g -XX:ReservedCodeCacheSize=512m</argLine>
             <stderr/>
             <environmentVariables>
               <!--
